# langchain_study

./: .env.example  .gitignore  main.py  pyproject.toml  start_ai_approval_windows.bat  start_ai_approval_windows.ps1  start_jupyter_8890.ps1
agent_demo/: README.md  (+4 more)
ai_approval_assistant/: .env.example  README.md  TODO.md  __init__.py  langgraph.json  pyproject.toml  start_windows.bat  start_windows.ps1  stop_windows.ps1  test.json
ai_approval_assistant/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
ai_approval_assistant/app/: __init__.py  logging_config.py  main.py  middleware.py
ai_approval_assistant/docs/: PROJECT_STRUCTURE.md  README.md  approval_graph.mmd  architecture.md  session_flow.mmd  studio_debug.md
ai_approval_assistant/prompts/: approval_prompts.json
ai_approval_assistant/scripts/: export_graph.py
ai_approval_assistant/tests/: __init__.py  conftest.py  test_approval_payload_builder.py  test_chat_api.py  test_crm_api_client.py  test_crm_config_service.py  test_crm_mapper.py  test_crm_service.py  test_daily_report_agentic_workflow_demo.py  test_daily_report_create_agent.py  test_daily_report_two_agents.py  test_debug_log_service.py  test_env_config_service.py  test_graph_state.py  test_model_prompts.py  test_session_state_service.py  test_short_term_memory_service.py  test_studio_integration.py  test_time_travel_api.py  test_time_travel_service.py  test_user_api_client.py  test_user_info_agent.py  test_user_profile_agent.py  test_user_service.py  test_user_tools.py
(+171 files in other folders)
