[project]
name = "learnone"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-chroma>=1.0.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.2.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
