[project]
name = "ai-approval-assistant"
version = "0.1.0"
description = "Independent FastAPI service for the AI approval assistant."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-core>=1.1.3",
    "langchain-deepseek>=1.0.1",
    "langgraph>=1.2.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "redis>=7.1.0",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
